# MonteCarloPhysics

./: .gitignore  Manifest.toml  Project.toml  README.md
10_lab/sprawozdanie/: main.aux  main.tex
10_lab/src/: main.jl  mc.jl  u_exact_wrap.jl
10_lab/u_xt_exact/: CMakeLists.txt  u_xt_exact.cpp
11_lab/407605_Orlowski_Wojciech/: Makefile
11_lab/include/: photon_difussion.hpp  utils.hpp
11_lab/jl_plot/: plot.jl
11_lab/sprawozdanie/: main.aux  main.tex
11_lab/src/: main.cpp  utils.cpp
12_lab/: Makefile
12_lab/data_anal/: main.jl  utils.jl
12_lab/gnu_scripts/: hist.gnu  plot.sh
12_lab/inputs/: input_1.in  input_2.in  input_3.in  input_4.in  input_5.in  input_6.in  input_7.in  input_8.in
12_lab/sprawozdanie/: main.aux  main.tex
12_lab/src/: dsmc.cpp  main.cpp
13_lab/: Makefile  progress.sh
13_lab/data_anal/: main.jl  utils.jl
13_lab/include/: dsmc.hpp
13_lab/inputs/: input.in  input_left.in  input_right.in
13_lab/sprawozdanie/: main.aux  main.tex
13_lab/src/: dsmc.cpp  main.cpp
14_lab/sprawozdanie/: main.tex
14_lab/src/: main.jl  plots.jl  qvmc.jl  utils.jl
1_lab/: funcs.jl  main.jl
1_lab/sprawozdanie/: main.aux  main.fdb_latexmk  main.fls  main.tex
2_lab/: generators.jl  main.jl
2_lab/sprawozdanie/: main.aux  main.fdb_latexmk  main.fls  main.tex
3_lab/: generators.jl  main.jl
3_lab/sprawozdanie/: main.aux  main.fdb_latexmk  main.fls  main.tex
4_lab/: main.jl
4_lab/lab_4_407605_Orlowski/: gen.jl
4_lab/sprawozdanie/: main.aux  (+3 more)
5_lab/: mc.jl
6_lab/: Makefile  exec
7_lab/: funcs.jl  main.jl
8_lab/: save_data.xyz
(+119 files in other folders)
